# rp-discord-bot

./: .gitignore  Cargo.toml  README.md
.github/workflows/: continuous_integration.yml
config/: affinities.txt  config.json  stats.txt
config/players/: player1.json
players/: player1.json  player1.txt
src/: commands.rs  lib.rs  main.rs  parser.rs  players.rs  stats.rs
src/commands/: dice.rs  help.rs  mod.rs  parser.rs  ping.rs  register.rs  roll.rs  summary.rs  utils.rs
src/config/: affinity.rs  mod.rs  parser.rs  players.rs  stat.rs
