[package]
name = "rp-tool"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
async-recursion = "1.0.0"
async-trait = "0.1.58"
dotenv = "0.15.0"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
serenity = { version = "0.11.5", default-features = false, features = ["client", "collector", "gateway", "model", "rustls_backend"] }
strum = "0.24.1"
strum_macros = "0.24.3"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
