[package]
name = "rp-tool"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
async-recursion = "1.0.0"
dotenv = "0.15.0"
poise = "0.6.1"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
